@@ -419,6 +419,22 @@ name|apache
 operator|.
 name|hadoop
 operator|.
+name|hive
+operator|.
+name|serde2
+operator|.
+name|SerDeUtils
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
 name|util
 operator|.
 name|ReflectionUtils
@@ -3970,6 +3986,40 @@ argument_list|()
 argument_list|)
 throw|;
 block|}
+name|boolean
+name|isNative
+init|=
+name|SerDeUtils
+operator|.
+name|isNativeSerDe
+argument_list|(
+name|tbl
+operator|.
+name|getSd
+argument_list|()
+operator|.
+name|getSerdeInfo
+argument_list|()
+operator|.
+name|getSerializationLib
+argument_list|()
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|isNative
+condition|)
+return|return
+name|tbl
+operator|.
+name|getSd
+argument_list|()
+operator|.
+name|getCols
+argument_list|()
+return|;
+else|else
+block|{
 try|try
 block|{
 name|Deserializer
@@ -4020,6 +4070,7 @@ name|getMessage
 argument_list|()
 argument_list|)
 throw|;
+block|}
 block|}
 block|}
 specifier|public
